# Red_habla_M1

./: LICENSE  Makefile  README.md  pyproject.toml
data/analyse/: s1_petit.txt
notebooks/: 1.0-aut-visualizacion-keypoints.ipynb  modelo_clasificador_lstm_rotacion.h5
